# dymex

./: .gitignore  Cargo.toml  LICENSE  README.md
dymex/: Cargo.toml
dymex/src/: error.rs  lib.rs
dymex/src/dynmath/: error.rs  eval.rs  mod.rs  multi_eval.rs  number.rs  vector.rs
dymex/src/parser/: error.rs  latex.rs  mermaid.rs  mod.rs
dymex/src/tokenizer/: error.rs  mod.rs  token.rs
dymex/tests/: eval_multi_expression.rs  eval_vector_expressions.rs
mermaid/: build_graphs.sh  mermaid_graph.md  mermaid_graph1.mmd  mermaid_graph2.mmd  sample.md  test.md
playground/: Cargo.toml  Dioxus.toml  index.html
playground/assets/: style.css
playground/src/: eval.rs  helpers.rs  main.rs
src/: error.rs  eval.rs  helpers.rs  lexer.rs  lib.rs  mermaid.rs  parser.rs
src/dynmath/: eval.rs  mod.rs  number.rs  vector.rs
src/tokenizer/: lexer.rs  mod.rs
tests/: eval_simple_expressions.rs  eval_vector_expressions.rs
tests/helpers/: mod.rs
