[package]
name = "playground"
version = "0.1.0"
authors = ["balint_ <somogyibalint@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dymex = {path = "../dymex", version = "*"}
dioxus = { version = "^0.7.6", features = [] }
# dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
charming = { version = "0.6.0", features = ["wasm"] }
indexmap = {version = "*"}
# rand = {version = "0.10.1"}
# rand_distr = {version = "0.6.0"}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

